Feature/#27 invocation service (#50)
* Написал сервис для инвокаций

* Фикс тестов

* Написал сервис для проверки доступа к оборудованию

* Тесты для сервисов

* Написал апишку

* Обновил сваггер

* Правки под линтер

* Фикс юнит-тестов

* Фикс правок
